pushing current code

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 {{#each posts as |post| }}
-<div class="post">
+<div class="post-list">
     <div>
         <h2>
             <a href="/post/{{post.id}}">{{post.name}}</a>
