--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
         <h3>Create a new post:</h3>
 
         <form>
-            <div class="post-list">
+            <div>
                 <label for="post-name">post name:</label>
                 <input class="form-input" type="text" id="post-name" name="post-name" />
             </div>
