--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div>
         <p>
-            {{post.comment}}
+            {{post.description}}
         </p>
     </div>
 </div>
