--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,5 +1,5 @@
 <div class="post-list">
     <h2>{{name}}</h2>
-    <p>{{comment}}</p>
+    <p>{{description}}</p>
     <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
